<resources>
    <string name="app_name">Kutumb</string>
    <string name="title_activity_survey">survey</string>
    <string name="tab_text_1">Demographic profile</string>
    <string name="tab_text_2">Migration Profile</string>
    <string name="tab_text_3">Awareness Profile</string>
    <string name="tab_text_4">Future Plan</string>
    <string name="title_activity_questions">questions</string>
    <string name="personal_profile">personal profile</string>
    <string name="migration_profile">Migration Profile</string>
    <string name="awareness_profile">Awareness Profile</string>
    <string name="future_plan">Future Profile</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="enter_name_here">Full Name</string>
    <string name="gender">Gender</string>
    <string name="government_id">Government ID</string>
    <string name="city_district">City/District</string>
    <string name="enter_mobile_no_here">Mobile Number (10-digit)</string>
    <string name="male">Male</string>
    <string name="minority">Minority</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="pin_code_n_permanent_address">PIN Code\n(Permanent Address)</string>
    <string name="enter_pin_code_here">PIN code</string>
    <string name="education">Education</string>
    <string name="others">Others</string>
    <string name="caste">Caste</string>
    <string name="general">General</string>
    <string name="obc">OBC</string>
    <string name="sc">SC</string>
    <string name="st">ST</string>
    <string name="is_the_applicant_a_pwd">Is the applicant a PWD</string>
    <string name="no_of_dependents">No. of Dependents</string>
    <string name="kutumb">KutumB</string>
    <string name="title_activity_verify_phone">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">694615541300824</string>
    <string name="fb_login_protocol_scheme">fb694615541300824</string>
    <string name="default_g_web_client_id">811469435111-i56t0apc9cdghedlcp8u17o09bolu69r.apps.googleusercontent.com</string>
    <string name="default_g_web_client_id1"> 811469435111-22nu4uvm3rl394athj3lljmv77600tp6.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="reg">Register</string>
    <string name="service">Services</string>
    <string name="contact">Contact Us</string>


    <string-array name="programming_language">
        <item>Rescue &amp; Relief</item>
        <item>Dignified Livelihoods</item>
        <item>Welfare</item>


    </string-array>

    <string-array name="description">
        <item>During COVID-19 panadamic we are helping migrant workers through our Rescue &amp; Relief service.</item>
        <item>We are helping migrant workers to improve their skills through our Dignified Livelihoods service.</item>
        <item>We are helping migrant workers to achieve their goals through our Welfare service.</item>

    </string-array>

    <string-array name="register1">
        <item></item>
        <item></item>
        <item></item>


    </string-array>

</resources>